--- a/styles/school.css
+++ b/styles/school.css
@@ -161,6 +161,11 @@
 main{
   text-align: center;
 }
+.bg-img{
+  background-image: url('../assets/bg.png');
+
+}
+
  
 .section-title{
   max-width: 1140px;
